--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,7 +13,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      
+
       - uses: maxim-lobanov/setup-xcode@v1
         with:
           xcode-version: latest-stable
@@ -23,6 +23,21 @@ jobs:
           ruby-version: '3.0'
           bundler-cache: true
 
+      - uses: actions/cache@v3
+        with:
+          path: Pods
+          key: ${{ runner.os }}-Pods-${{ hashFiles('./yarn.lock') }}
+
+
       - uses: maierj/fastlane-action@v3.0.0
         with:
           lane: 'release'
+      
+      - run: |
+          tar -zcf release.tar.gz build
+      - uses: "marvinpinto/action-automatic-releases@latest"
+        with:
+          repo_token: "${{ secrets.GITHUB_TOKEN }}"
+          prerelease: false
+          files: |
+            release.tar.gz
