--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: Fastlane Release
+name: Fastlane DMG Release
 
 on:
   push:
@@ -9,7 +9,6 @@ permissions: write-all
 concurrency: 
   group: ${{ github.ref }}
   cancel-in-progress: true
-
 
 jobs:
   build:
